# quickie_algos

./: .backlog  .clang-format  CMakeLists.txt  Jamfile  PreLoad.cmake  README.md  SetupHunter.cmake  benchmark.cpp  benchmark.fish  rebuild.sh
.github/workflows/: build_std.yml
rld/algos/: graph.h  merge_sort.h  topo_sort.h
rld/qalgos/: insertion_sort.h  quicksort.h
rld/quickie_algos/: insertion_sort.h  selection_sort.h
test/: insertion_sort.cpp  median.cpp  nth_element.cpp  selection_sort.cpp  sorting.cpp  test_graph.cpp  test_sorting.cpp  test_topo_sort.cpp
